tests/snapshot/error/source_locations/expression/yield_star/get_iterator_throws.js
var iterable = {
  [Symbol.iterator]() {
    throw new Error();
  }
}

function *generator() {
  yield* iterable;
}

let iter = generator();
iter.next();