tests/snapshot/error/source_locations/expression/yield_star/get_iterator_throws.exp
Error: 
  ┌ source_locations/expression/yield_star/get_iterator_throws.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at <anonymous> (source_locations/expression/yield_star/get_iterator_throws.js:3:11)
  at generator (source_locations/expression/yield_star/get_iterator_throws.js:8:3)
  at next (<native>)
  at <global> (source_locations/expression/yield_star/get_iterator_throws.js:12:1)